--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -20,6 +20,7 @@
 			<ul class="nav navbar-nav">
 				<li><a href="/courses">查询课程信息</a></li>
 				<li><a href="/info">查询选课结果</a></li>
+				<li><a href="/projects">我的项目</a></li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
