--- a/src/templates/admin/base.html
+++ b/src/templates/admin/base.html
@@ -22,6 +22,7 @@
 				<li><a href="/admin/mycourses">我发布的课程</a></li>
 				<li><a href="/admin/info">查询选课结果</a></li>
 				<li><a href="/register">添加同学</a></li>
+				<li><a href="/admin/update">修改工号</a></li>
 			</ul>
 
 			<ul class="nav navbar-nav navbar-right">
